SONAR-15654 added liveness endpoint to allowlist with passcode